--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Shell history files
 *history
 
-# Swap
+# Vim files
 [._]*.s[a-v][a-z]
 [._]*.sw[a-p]
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
 [._]sw[a-p]
-
-# Vim Session
+.viminfo
 Session.vim
+
