Added a python script to fetch pictures from wallpaper subreddits, installed and bound feh, options for multi-monitor script

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@
 .viminfo
 Session.vim
 .netrwhist
+/backgrounds/.backgrounds/*
+/config/.config/qutebrowser/qsettings/*
 
-/config/.config/browsh/firefox_profile/
+
+# This file holds username/pass for accounts related to scripts such as
+# the background fetch python script which requires reddit credentials
+config.ini
