--- a/config/.config/compton/compton.conf
+++ b/config/.config/compton/compton.conf
@@ -66,9 +66,9 @@ no-dock-shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 5;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = 10;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = 20;
 # The translucency for shadows. (default .75)
 shadow-opacity = 0.5;
 
@@ -115,7 +115,7 @@ menu-opacity = 1;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 alpha-step = 0.06;
 
 # Dim inactive windows. (0.0 - 1.0)
