--- a/Input/.inputrc
+++ b/Input/.inputrc
@@ -1,2 +1,7 @@
 # Precedes Bash prompt with (ins) or (cmd) depending on mode
+set editing-mode vi
 set show-mode-in-prompt on
+set vi-ins-mode-string "\1\e[0;33m\2ins+\1\e[0m\2"
+set vi-cmd-mode-string "\1\e[0;32m\2cmd:\1\e[0m\2"
+
+set keymap vi-insert
