--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -221,6 +221,11 @@ bindsym $mod+Shift+b exec --no-startup-id sh ~/.scripts/bluetooth_toggle
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
 
+
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
