remove log from commit files, small update to script so it works with cron nicely

--- a/scripts/.scripts/Server/google_ddns_update.example
+++ b/scripts/.scripts/Server/google_ddns_update.example
@@ -1,3 +1,5 @@
+#!/bin/sh
+
 curl -s https://username:password@domains.google.com/nic/update?hostname=sub.domain.tld | awk '{print $1 " - www - " strftime("%Y-%m-%d")}' >> output.log
 
 And then again for each subdomain you need to add
