--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -199,7 +199,7 @@ client.focused_inactive #444444 #444444 #2c2c2f
 client.urgent #383a3b #383a3b #ee0000
 
 # Run any arbitrary script
-bindsym $mod+s exec --no-startup-id dmenu_run_script
+bindsym $mod+s exec --no-startup-id ~/.scripts/dmenu_run_script
 # Toggle basic ethernet capability
 bindsym $mod+Shift+n exec --no-startup-id ~/.scripts/ethernet_toggle
 
