--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -13,7 +13,7 @@
 
 # Larry basic definitions
 
-set $term --no-startup-id urxvt
+set $term --no-startup-id kitty
 # End Definitions
 
 
@@ -176,8 +176,8 @@ bindsym $mod+r mode "resize"
 ## Larry Added (Some things above were edited but this is new features) ##
 
 # i3-gaps info
-gaps inner 15
-gaps outer 10
+gaps inner 5
+gaps outer 5
 
 bindsym $mod+Shift+f exec $term -e ranger
 
@@ -222,9 +222,9 @@ bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
 
 
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec "${HOME}/.scripts/volume.sh raise"
+bindsym XF86AudioLowerVolume exec "${HOME}/scripts/volume.sh lower"
+bindsym XF86AudioMute exec "${HOME}/scripts/volume.sh mute"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
